--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
   <title>webpack starterkit</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div>
+    <h1>Hello Everyone</h1>
+    <p> Hello Everyone</p>
+  </div>
 </body>
 </html>
